finish main functionality

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -5,7 +5,7 @@
                 <pre>https://www.goodreads.com/user/show/<span class='highlighted'>this-is-your-user</span></pre>
             </p>
         </div>
-        <form class='form' action="/book" method="GET">
+        <form class='form' action="/random" method="GET">
             <label for="user">
                 <input type='text' name="user" id="user" placeholder="7777777-joe">
             </label>
