--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 /* Imports */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
+
 /* Variables */
 :root {
     --main-color: rgb(248, 108, 43);
@@ -31,7 +32,13 @@ pre {
     font-size: 20px;
 }
 
-/* Utilities */
+
+
+
+/* ---------------------
+    #Utilities
+------------------------ */
+
 .instructions__url {
     font-size: 2rem;
 }
@@ -45,7 +52,13 @@ pre {
     font-weight: 100;
 }
 
-/* Layout */
+
+
+
+
+/* -------------------
+     #Layout 
+ --------------------*/
 .main-header{
     color: var(--dark-color);
     height: 100px;
@@ -81,13 +94,20 @@ pre {
     margin-top: auto;
 }
 
-/* Home page */
+
+
+
+
+/* ----------------------
+      #Home page
+-------------------------*/
+
 .form-group {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-top: 5rem;
+    margin-top: 8rem;
 
 }
 .form {
@@ -132,7 +152,29 @@ input[type='text']::placeholder {
 }
 
 /* Individual book page */
-.icon-star > svg {
+.book {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    margin: 1rem 0.75rem;
+    padding: 2rem 0rem;
+    background-color: rgb(230, 230, 230);
+}
+.book__info {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.book__description {
+    width: 45%;
+}
+
+.i-star > svg {
     margin-top: 10px;
     width: 0.9rem;
     height: 0.9rem;
@@ -140,80 +182,37 @@ input[type='text']::placeholder {
 
 .options {
     display: flex;
-    justify-content: center;    
+    height: 80px;
+    justify-content: center; 
+    align-items: center;   
 }
 
 .options > a {
-    margin: 1rem 2rem;
+    display: inline;
+    margin: 0 2rem;
     text-decoration: none;
     color: var(--main-color);
 }
 
 .options > a:hover {
     border-bottom: 3px solid var(--main-color);
-
 }
 
-/* Book list page */
-.booklist {
-    display: flex;
-    flex-direction: column;
-}
-.booklist__header {
-    font-family: var(--main-font);
-    margin-top: 4rem;
-    margin-bottom: 4rem;
-    margin-left: 35%;
-    font-size: 2rem;
-    padding: 1rem 2rem;
-    width: 750px;
+.i-outside {
+    height: 1rem;
+    width: 1rem;
+    stroke: var(--main-color)
 }
 
-.booklist__header--highlight {
-    border: 2px solid var(--main-color);
-    border-radius: 10px;
-    margin: 0 1rem;
-    padding: 0.5rem;
-}
 
-.books {
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(3, 25vw);
-    justify-content: center;
-    width: 80%;
-}
 
-.book {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    border: none;
-    border-radius: 10px;
-    margin: 1rem 0.75rem;
-    background-color: rgb(230, 230, 230);
-    height: 400px;
-}
 
-.book__img-container {
-    width: 100%;
-    height: 50%;
-    
-}
 
-.book__img {
-    display: block;
-    margin: 1rem auto;
-    height: 100%;
-}
-.book__info {
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.book__title {
-    font-size: 1.2rem;
+/* -----------------
+    Error page
+---------------------*/
+.error-message {
+    width: 400px;
+    margin: 8rem auto;
+    font-size: 20pt;
 }
