--- a/views/individualBook.handlebars
+++ b/views/individualBook.handlebars
@@ -2,21 +2,37 @@
     <div class='book__img-container'>
         <img class='book__img' src="{{book.image}}" alt="book-cover">
     </div>
-    <div class="book__info">
+    <div class='book__info'>
         <p class='book__title'>{{book.title}}</p>
         <p class='book__author'>{{book.author}}</p>
         <p class='book__rating'>
-            <span class='icon-star'>
+            <span class='i-star'>
                 <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none"
                     stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <polygon
                         points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
                     </polygon>
                 </svg>
-            </span>{{book.rating}}</p>
+            </span>{{book.rating}} / 5
+        </p>
+        <p class='book__description'>{{book.description}}</p>
     </div>
 </section>
 <section class='options'>
-    <a href="#">See more at Goodreads</a>
-    <a href="/booklist">See full bookshelf</a>
+    <a href="{{book.link}}" target='_blank'>See more
+        <svg class='i-outside' xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"
+            fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <g fill="none" fill-rule="evenodd">
+                <path d="M18 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h5M15 3h6v6M10 14L20.2 3.8" />
+            </g>
+        </svg>
+    </a>
+    <a href="https://www.goodreads.com/review/list/{{user}}?shelf=to-read">Full bookshelf
+        <svg class='i-outside' xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24"
+            fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <g fill="none" fill-rule="evenodd">
+                <path d="M18 14v5a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8c0-1.1.9-2 2-2h5M15 3h6v6M10 14L20.2 3.8" />
+            </g>
+        </svg>
+    </a>
 </section>
