--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta name="keywords" content="books, goodreads">
-    <meta name="description" content="Goodreads client">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Next reads">
+    <link rel="stylesheet" href="/styles.css">
     <title>To-read list</title>
 </head>
 
 <body>
     <header class='main-header'>
         <a class='main-header__logo' href="/">
-            <h1 class='main-header__title'>NEXT<span class='thin'>reader</span></h1>
+            <h1 class='main-header__title'>NEXT<span class='thin'>reads</span></h1>
             <p class='main-header__tagline'>Pick a random book from your list</p>
         </a>
     </header>
