--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,5 @@
-/* --------------
-    Base
------------------ */
+/*     Base
+------------------------------------------------ */
 
 /* Imports */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
@@ -36,16 +35,9 @@ pre {
     font-size: 20px;
 }
 
+/* Utilities
+------------------------------------------------------ */
 
-
-
-/* ---------------------
-    #Utilities
------------------------- */
-
-.instructions__url {
-    font-size: 2rem;
-}
 .highlighted {
     border-bottom: 3px solid var(--main-color);
     font-weight: bold;
@@ -57,15 +49,13 @@ pre {
 }
 
 
-
-
-
-/* -------------------
-     #Layout 
- --------------------*/
+/* Layout
+ ------------------------------------------*/
 .main-header{
     color: var(--dark-color);
-    height: 100px;
+    height: 130px;
+    box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.3);
+
 }
 
     .main-header__logo {
@@ -99,19 +89,19 @@ pre {
 }
 
 
-
-
-
-/* ----------------------
-      #Home page
--------------------------*/
+/* Home page
+-----------------------------------------------*/
 
 .form-group {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-top: 8rem;
+    margin-top: 6rem;
+}
+
+.instructions__url {
+    font-size: 2rem;
 }
 
 .form {
@@ -155,7 +145,8 @@ pre {
         height: 40px;
     }
 
-/* Individual book page */
+/* Individual book page 
+----------------------------------------------*/
 .book {
     display: flex;
     flex-direction: column;
@@ -210,12 +201,8 @@ pre {
 }
 
 
-
-
-
-/* -----------------
-    Error page
----------------------*/
+/* Error page
+----------------------------------------------*/
 .error-message {
     width: 400px;
     margin: 8rem auto;
